*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.6 ===
* Updated behaviour of split editing in UI.

=== 1.0.5 ===
* Implemented automatic scale of spectrum graph switch.
* Implemented split frequency display.
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Fixed bug for invalid processing of large buffer sizes.
* Reduced CPU consumption.
* Reduced the rate of the gain curve update.
* Updated build scripts and dependencies.

=== 1.0.3 ===
* Updated build scripts and dependencies.

=== 1.0.2 ===
* Updated build scripts and dependencies.

=== 1.0.1 ===
* Implemented Linear Phase mode.
* Updated build scripts and dependencies.

=== 1.0.0 ===
* Initial release.
